--- a/templates/cgpa.html
+++ b/templates/cgpa.html
@@ -7,6 +7,7 @@
 <body>
 
 <nav>
+    <a href="../index.html">Home</a>
     <a href="cgpa.html">CGPA</a>
     <a href="grades.html">Grades</a>
 </nav>
